--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,37 @@ padding: 10px;
 .active:hover{
   color: #5F7464;
 }
+
+.navbar-light .navbar-brand {
+  color: #5F7464;
+}
+.navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
+  color: #5F7464;
+}
+.navbar-light .navbar-nav .nav-link {
+  color: #5F7464;
+}
+.navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
+  color: #5F7464;
+}
+.navbar-light .navbar-nav .nav-link.disabled {
+  color: #5F7464;
+}
+.navbar-light .navbar-nav .show > .nav-link,
+.navbar-light .navbar-nav .nav-link.active {
+  color: #5F7464;
+}
+.navbar-light .navbar-toggler {
+  color: #5F7464;
+  border-color: rgba(0, 0, 0, 0.1);
+}
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+.navbar-light .navbar-text {
+  color: #5F7464;}
+  
+
 /* Title */
 
 .title-paragraph{
