--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ Dark Green #5F7464*/
 body{
 font-family: 'Red Hat Display';
 color: #5F7464;
+background-color: #e7e8d1;
 
 }
 h2{
@@ -15,26 +16,26 @@ h2{
   font-weight: bold;
 }
 
+h3{
+
+}
+
 #title{
   background-color: #e7e8d1;
   padding:5% 5% 8%;
   color: #5F7464;
 }
 
-.container-fluid{
-  padding:0 0 0 0;
-}
-
 /* Navbar */
 
-.navbar-brand{
+.home-navbar-brand{
 font-family: 'Red Hat Display';
 font-weight: bold;
 font-size: 2rem;
 color: #5F7464;
 padding-left: 8%;
 }
-.navbar-brand:hover{
+.home-navbar-brand:hover{
   color: #5F7464;
 }
 .navbar-nav{
@@ -61,6 +62,7 @@ padding: 10px;
 }
 
 .navbar-toggler-icon {
+  color: #5F7464;
   border-color: #5F7464;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 
@@ -95,7 +97,67 @@ color: #e7e8d1;
 }
 .service-card{
   text-align: center;
+  padding: 0 5% 5% 5%;
+
+}
+
+.icon{
+ color: #a7beae;
+}
+
+.h3-service{
+  padding: 10% 0 5% 0;
+}
+/* Meet the Owner */
+
+#background{
+  background-color: #e7e8d1;
   padding: 5%;
+  text-align: center;
+}
 
+.fa-user-tie{
+  color: #b85042;
+}
 
+.h3-background{
+  padding: 5%;
+  font-size: 4rem;
+  font-weight: bold;
+}
+
+.p-background{
+  font-size: 1.5rem;
+  padding: 0 5%;
+}
+
+/* Footer */
+
+#footer{
+  background-color: #e7e8d1;
+  text-align: center;
+  padding:0 0 2% 0;
+}
+.footer-link{
+  text-decoration: none;
+  color: #5F7464;
+  padding: 1.5rem;
+}
+
+.footer-link:hover{
+  color: #b85042;
+}
+
+////////////////////* Projects Page *///////////////////////
+
+/* Projects Navbar */
+.navbar-brand{
+font-family: 'Red Hat Display';
+font-weight: bold;
+font-size: 2rem;
+color: #5F7464;
+padding: 8%;
+}
+.navbar-brand:hover{
+  color: #5F7464;
 }
